--- a/src/cascadia/TerminalSettingsEditor/Launch.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Launch.xaml
@@ -117,7 +117,8 @@
                                            Grid.Column="1"
                                            Grid.ColumnSpan="2"
                                            AutomationProperties.AccessibilityView="Raw"
-                                           Text="{x:Bind Name}" />
+                                           Text="{x:Bind Name}"
+                                           VerticalAlignment="Center" />
 
                                 <TextBlock Grid.Row="1"
                                            Grid.Column="1"
